add_subdirectory(YAML)
add_library(yaml-archive-headers INTERFACE)
target_include_directories(yaml-archive-headers INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(yaml-archive-headers INTERFACE "${CMAKE_CURRENT_BINARY_DIR}")
target_link_libraries(yaml-archive-headers INTERFACE yaml-cpp-headers)
