set(Boost_USE_STATIC_LIBS NOT ${BUILD_SHARED_LIBS})
find_package(Boost COMPONENTS system serialization REQUIRED)
add_library(yaml-archive OutputArchive.cpp InputArchive.cpp)
set_property(TARGET yaml-archive PROPERTY CXX_STANDARD 14)
if (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
    target_compile_options(yaml-archive PRIVATE -ftemplate-backtrace-limit=0)
endif()
target_link_libraries(yaml-archive PUBLIC yaml-archive-headers)
target_link_libraries(yaml-archive PUBLIC yaml-cpp)
target_include_directories(yaml-archive PUBLIC ${Boost_INCLUDE_DIR})
target_link_libraries(yaml-archive PUBLIC ${Boost_LIBRARIES})
